# learning

./: README.md
001/: .env  Cargo.toml  README.md  docker-compose.yml  makefile
001/backend/: Cargo.toml
001/backend/src/: auth.rs  error.rs  main.rs  tracing.rs
001/backend/src/api/: admin.rs  greeter.rs  mod.rs
001/client/: Cargo.toml
001/client/src/: main.rs
001/docker/keycloak/: Dockerfile
001/scripts/: setup_keycloak.sh
002/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  makefile  rustfmt.toml
002/backend/: Cargo.toml
002/backend/src/: api.rs  health.rs  main.rs  metrics.rs
002/docker/grafana/: Dockerfile
002/docker/grafana/alerting/: mute_times.yml
002/docker/grafana/dashboards_json/: lb_example.json
002/docker/prometheus/: Dockerfile  prometheus.yml
002/proxy/: Cargo.toml
002/proxy/src/: config.rs  health.rs  logging.rs  main.rs
002/scripts/: test.sh
003/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
003/backend/: Cargo.toml
003/backend/src/: lib.rs  main.rs
003/backend/src/api/: calc_crud.rs  mod.rs
003/backend/src/services/: calc_crud.rs  mod.rs
003/common/: Cargo.toml
003/common/src/: lib.rs  tracing.rs
003/common/src/database/: calc.rs  mod.rs
003/common/src/model/: calc.rs
003/docker/mongodb/: Dockerfile
003/docker/nginx/: nginx.conf
003/scripts/: results.sh  test.sh  test_random.sh
003/worker/: Cargo.toml
003/worker/src/: config.rs  lib.rs  main.rs  tracing.rs
003/worker/src/api/: calc.rs  mod.rs
003/worker/src/database/: calc.rs  mod.rs
003/worker/src/model/: calc.rs
003/worker/src/services/: calc.rs
004/: .env  Cargo.toml  Dockerfile  README.md  data01.csv  docker-compose.yml  rustfmt.toml
004/backend/: Cargo.toml
004/backend/src/: main.rs  models.rs  serv_config.rs
004/backend/src/api/: files.rs  mod.rs  upload.rs
004/backend/src/services/: upload.rs
004/common/: Cargo.toml
004/common/src/: storage.rs  tracing.rs
004/config/: backend.conf.toml  worker.conf.toml
004/docker/minio/: Dockerfile
004/docker/postgresql/: Dockerfile
004/docker/rabbitmq/: Dockerfile  definitions.json  rabbitmq.conf
004/public/: index.html
004/worker/: Cargo.toml
004/worker/src/: main.rs  processor.rs  queue.rs  serv_config.rs
diagrams/: 001.excalidraw  002.excalidraw  003.excalidraw  004.excalidraw
