[workspace]
members = ["backend", "proxy"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = "0.7.9"
dotenvy = "0.15.7"
envy = "0.4.2"
pingora = { version = "0.4", features = ["lb"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
