[workspace]
members = ["worker"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
mongodb = "3.1.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
