[workspace]
members = ["backend", "common", "worker"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
common = { path = "./common" }
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3"
mongodb = "3.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
