[workspace]
members = ["backend", "common", "worker"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.72.0"
axum = "0.8.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
common = { path = "./common" }
config = { version = "0.15.7", features = ["toml"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3"
http = "1.2.0"
http-serde = { version = "2.1.1" }
mongodb = "3.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
