[workspace]
members = ["backend", "common", "worker"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77.0"
axum = "0.8.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
common = { path = "./common" }
config = { version = "0.15.8", features = ["toml"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3"
http = "1.2.0"
http-serde = { version = "2.1.1" }
image = "0.25.6"
lapin = "2.5.0"
mongodb = "3.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["full", "tracing", "io-util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
