[package]
edition = "2021"
name = "common"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
bson = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
