[package]
edition = "2021"
name = "backend"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
common = { workspace = true }
config = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
